[package]
authors = ["Tobias Widlund <widlundtobias@gmail.com>"]
categories = ["web-programming", "wasm"]
description = "Main loop abstraction that works for both native and Emscripten builds. Gets around the issue of freezing up browser tabs when a naive main loop is used."
edition = "2018"
keywords = ["emscripten", "wasm32", "main-loop"]
license-file = "LICENSE-MIT"
name = "emscripten_main_loop"
readme = "README.md"
repository = "https://github.com/therocode/rust_emscripten_main_loop"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
